# finance

./: .gitignore  package-lock.json  package.json  pyproject.toml  tailwind.config.js
apps/accounts/: admin.py  models.py
apps/accounts/migrations/: 0001_initial.py  0002_initial.py  0003_alter_account_user.py
apps/accounts/tests/: test_models.py
apps/authentication/: decorators.py  forms.py  models.py  signals.py  urls.py  views.py
apps/authentication/migrations/: 0001_initial.py  0002_alter_user_email.py
apps/authentication/tests/: test_views.py
apps/transactions/: admin.py  apps.py  forms.py  metrics.py  models.py  signals.py  urls.py  utils.py  views.py
apps/transactions/management/commands/: mock_transactions.py
apps/transactions/migrations/: 0001_initial.py  0002_rename_genre_transaction_kind.py
apps/transactions/tests/: test_forms.py  test_models.py
core/: settings.py  urls.py
core/common/: models.py  views.py
core/common/templatetags/: input_tags.py
mocks/: transactions.csv
src/static/css/: tailwind.css
src/templates/: _base.html
src/templates/layouts/: authentication.html  main.html
src/templates/meta/: __load.html  css.html
src/templates/pages/authentication/: login.html  register.html
src/templates/pages/home/: dashboard.html
src/templates/pages/transactions/: dashboard.html  transaction_create.html  transaction_list.html  (+2 more)
src/templates/partials/: _error-message.html  _header.html  _pagination.html  _sidebar.html
src/templates/scripts/: _balance_chart_scripts.html  _currency_chart_scripts.html  _profit_chart_scripts.html
(+11 files in other folders)
